cmake_minimum_required (VERSION 2.8)
set( APPNAME app )
project( ${APPNAME} )
if( DEBUG )
    add_definitions( "-Wall -g" )
endif()
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/src )
link_directories( ${CMAKE_CURRENT_SOURCE_DIR}/lib )
aux_source_directory( ${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)
add_executable( ${APPNAME} ${DIR_SRCS} )
list(APPEND DIR_SRCS tests.c)
target_link_libraries( ${APPNAME} pthread )
add_subdirectory( third_party )
